--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,10 @@ inputs:
   timezone:
     description: 'Timezone (ex. America/Denver)'
     required: false
+  use-workflow-run-event:
+    description: 'Use workflow_run section of github event for information'
+    required: false
+    default: 'false'
 runs:
   using: 'node12'
   main: 'dist/index.js'
